--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <!-- end of header -->
 	
 	    <!-- About-->
-    <div id="about" class="basic-1 bg-gray">
+    <div id="about" class="basic-1 bg-sblack">
         <div class="container">
             <div class="row">
                 <div class="col-lg-4">
