changing the gray to black

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     <!-- end of about -->
 
 	<!-- Projects -->
-    <div class="basic-4 bg-gray">
+    <div class="basic-4 bg-sblack">
         <div class="container">
             <div class="row text-center">
                 <div class="col-lg-12">
@@ -252,7 +252,7 @@
 	    <!-- Details -->
 	<div class="split">
 		<div class="area-1 cardx">
-		</div><!-- end of area-1 on same line and no space between comments to eliminate margin white space --><div class="area-2 bg-gray">
+		</div><!-- end of area-1 on same line and no space between comments to eliminate margin white space --><div class="area-2 bg-sblack">
             <div class="container">    
                 <div class="row">
                     <div class="col-lg-12">     
@@ -360,7 +360,7 @@
     <!-- end of questions -->
 	
 	    <!-- Contact -->
-    <div id="contact" class="form-1 bg-gray">
+    <div id="contact" class="form-1 bg-sblack">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -399,7 +399,7 @@
     <!-- end of contact -->
 	
 	    <!-- Footer -->
-    <div class="footer bg-gray">
+    <div class="footer bg-sblack">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -437,7 +437,7 @@
 
 
     <!-- Copyright -->
-    <div class="copyright bg-gray">
+    <div class="copyright bg-sblack">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
