--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
     <!-- end of Projects -->
 	
     <!-- Services -->
-    <div id="services" class="basic-2">
+    <div id="services" class="basic-2 bg-sblack">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
