--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h2 class="h2-heading">Frequent questions</h2>
+                    <h2 class="h2-heading c-red">Frequent questions</h2>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
             <div class="row">
@@ -449,7 +449,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <p class="p-small">Distributed By <a class="no-line" href="https://linktr.ee/ayoubelouardioff">Ayoub El Ouardi</a></p>
+                    <p class="p-small">Developed By <a class="no-line" href="https://linktr.ee/ayoubelouardioff">Ayoub El Ouardi</a></p>
                 </div> <!-- end of col -->
             </div> <!-- enf of row -->
         </div> <!-- end of container -->
