--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <span class="fa-stack">
                         <a target="_blank" href="https://twitter.com/SMoukerim46627">
                             <i class="fas fa-circle fa-stack-2x"></i>
-                            <i class="fab fa-x-twitter fa-stack-1x"></i>
+                            <i class="fab fa-twitter fa-stack-1x"></i>
                         </a>
                     </span>
 					<span class="fa-stack">
@@ -225,7 +225,7 @@
             <div class="row">
                 <div class="col-lg-4">
                     <div class="text-box text-center cardx">
-                        <i class="fas fa-hashtag fa-stack-2x></i>
+                        <i class="fas fa-hashtag fa-stack-2x</i>
                         <h4>SOCIAL MEDIA DESIGN</h4>
                         <p>In today's digital age, a strong online presence is essential. Our Social Media Design service is your key to making a lasting impression on your audience. We understand that compelling visuals are the heart of effective social media marketing.</p>
                     </div> <!-- end of text-box -->
@@ -419,7 +419,7 @@
                         <span class="fa-stack">
                             <a target="_blank" href="https://twitter.com/SMoukerim46627">
                                 <i class="fas fa-circle fa-stack-2x"></i>
-                                <i class="fab fa-x-twitter fa-stack-1x"></i>
+                                <i class="fab fa-twitter fa-stack-1x"></i>
                             </a>
                         </span>
                         <span class="fa-stack">
