editing the title of the SMD

--- a/index.html
+++ b/index.html
@@ -225,8 +225,8 @@
             <div class="row">
                 <div class="col-lg-4">
                     <div class="text-box text-center cardx">
-                        <i class="fas fa-phone"></i>
-                        <h4>SOCIAL MEDIA DESIGN</h4>
+                        <i class="fas fa-mobile-phone"></i>
+                        <h4>SOCIAL MEDIA</h4>
                         <p>In today's digital age, a strong online presence is essential. Our Social Media Design service is your key to making a lasting impression on your audience. We understand that compelling visuals are the heart of effective social media marketing.</p>
                     </div> <!-- end of text-box -->
                 </div> <!-- end of col -->
