--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <span class="fa-stack">
                         <a target="_blank" href="https://twitter.com/SMoukerim46627">
                             <i class="fas fa-circle fa-stack-2x"></i>
-                            <i class="fa-solid fa-twitter fa-stack-1x"></i>
+                            <i class="fab fa-twitter fa-stack-2x"></i>
                         </a>
                     </span>
 					<span class="fa-stack">
@@ -364,7 +364,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h2>Contact details</h2>
+                    <h2 class="c-red">Contact details</h2>
                     <p class="p-heading">For any type of online project please don't hesitate to get in touch with me. The fastest way is to send me your message using the following email <a class="blue no-line" href="mailto:info@soufyanemokrim.com">info@soufyanemokrim.com</a></p>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -419,7 +419,7 @@
                         <span class="fa-stack">
                             <a target="_blank" href="https://twitter.com/SMoukerim46627">
                                 <i class="fas fa-circle fa-stack-2x"></i>
-                                <i class="fa-solid fa-twitter fa-stack-1x"></i>
+                                <i class="fab fa-twitter fa-stack-2x"></i>
                             </a>
                         </span>
                         <span class="fa-stack">
