--- a/project.html
+++ b/project.html
@@ -18,7 +18,7 @@
 	<meta name="twitter:card" content="summary_large_image"> <!-- to have large image post format in Twitter -->
 
     <!-- Webpage Title -->
-    <title>Project Details - Mark</title>
+    <title class="c-red">Project Details - Mark</title>
     
     <!-- Styles -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
