--- a/privacy.html
+++ b/privacy.html
@@ -18,7 +18,7 @@
 	<meta name="twitter:card" content="summary_large_image"> <!-- to have large image post format in Twitter -->
 
     <!-- Webpage Title -->
-    <title>Privacy Policy - Mark</title>
+    <title>Privacy Policy</title>
     
     <!-- Styles -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
