adding mozart to the main projects section in the HOME page

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     </header> <!-- end of header -->
     <!-- end of header -->
 	
-	    <!-- About-->
+	<!-- About-->
     <div id="about" class="basic-1 bg-sblack">
         <div class="container">
             <div class="row">
@@ -198,11 +198,11 @@
                     <div class="col-lg-4">
                         <div class="text-container text-center">
                             <div class="image-container">
-                                <a href="projects/wes/gallery.html">
-                                    <img class="img-fluid" src="projects/wes/westhame.jpg" alt="alternative">
+                                <a href="projects/mzt/gallery.html">
+                                    <img class="img-fluid" src="projects/mzt/mozart.png" alt="alternative">
                                 </a>
                             </div> <!-- end of image-container -->
-                            <p><strong>West Ham United - Artworks</strong></p>
+                            <p><strong>Its Mozart | Social Media</strong></p>
                         </div> <!-- end of text-container -->
                     </div> <!-- end of col -->
                 </div> <!-- end of row -->
@@ -249,7 +249,7 @@
     </div> <!-- end of basic-2 -->
     <!-- end of services -->
 	
-	    <!-- Details -->
+	<!-- Details -->
 	<div class="split">
 		<div class="area-1 cardx">
 		</div><!-- end of area-1 on same line and no space between comments to eliminate margin white space --><div class="area-2 bg-sblack">
@@ -359,7 +359,7 @@
     </div> <!-- end of accordion-1 -->
     <!-- end of questions -->
 	
-	    <!-- Contact -->
+	<!-- Contact -->
     <div id="contact" class="form-1 bg-sblack">
         <div class="container">
             <div class="row">
@@ -398,7 +398,7 @@
     </div> <!-- end of form-1 -->  
     <!-- end of contact -->
 	
-	    <!-- Footer -->
+	<!-- Footer -->
     <div class="footer bg-sblack">
         <div class="container">
             <div class="row">
