--- a/projects.html
+++ b/projects.html
@@ -132,7 +132,7 @@
 
 								<div class="col">
 									<div class="text-container">
-										<div class="image-container">
+										<div class="image-container hover-anim">
 											<a href="projects/mar/gallery.html">
 												<img class="img-fluid" src="projects/mar/marseille.jpg" alt="alternative">
 											</a>
@@ -143,7 +143,7 @@
 
 								<div class="col">
 									<div class="text-container">
-										<div class="image-container">
+										<div class="image-container hover-anim">
 											<a href="projects/soc/gallery.html">
 												<img class="img-fluid" src="projects/soc/socialmedia.jpg" alt="alternative">
 											</a>
@@ -154,7 +154,7 @@
 
                                 <div class="col">
 									<div class="text-container">
-										<div class="image-container">
+										<div class="image-container hover-anim">
 											<a href="projects/mzt/gallery.html">
 												<img class="img-fluid" src="projects/mzt/mozart.png" alt="Its Mozart | cover">
 											</a>
@@ -165,7 +165,7 @@
 
 								<div class="col">
 									<div class="text-container">
-										<div class="image-container">
+										<div class="image-container hover-anim">
 											<a href="projects/dir/gallery.html">
 												<img class="img-fluid" src="projects/dir/morocco.png" alt="alternative">
 											</a>
@@ -176,7 +176,7 @@
 
                                 <div class="col">
 									<div class="text-container">
-										<div class="image-container">
+										<div class="image-container hover-anim">
 											<a href="projects/wes/gallery.html">
 												<img class="img-fluid" src="projects/wes/westhame.jpg" alt="alternative">
 											</a>
@@ -187,7 +187,7 @@
 
                                 <div class="col">
 									<div class="text-container">
-										<div class="image-container">
+										<div class="image-container hover-anim">
 											<a href="projects/wac/gallery.html">
 												<img class="img-fluid" src="projects/wac/widade.png" alt="alternative">
 											</a>
