--- a/projects.html
+++ b/projects.html
@@ -71,7 +71,7 @@
 					
 					
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#contact">Contact</a>
+                        <a class="nav-link page-scroll" href="index.html#contact">Contact me</a>
                     </li>
                 </ul>
                 <span class="nav-item social-icons">
