fix imgs viewing in the /projects

--- a/projects/soc/gallery.html
+++ b/projects/soc/gallery.html
@@ -29,17 +29,17 @@
 		<div class="gallery__warp">
 			<div class="row">
 				<div class="col-lg-12">
-					<a href="gallery/header.png">
+					<a href="gallery/header.png" class="gallery__item fresco" data-fresco-group="gallery">
 						<img src="gallery/header.png" alt="">
 					</a>
 				</div>
 				<div class="col-lg-12">
-					<a href="gallery/text.png">
+					<a href="gallery/text.png" class="gallery__item fresco" data-fresco-group="gallery">
 						<img src="gallery/text.png" alt="">
 					</a>
 				</div>
 				<div class="col-lg-12">
-					<a href="gallery/2.png">
+					<a href="gallery/2.png" class="gallery__item fresco" data-fresco-group="gallery">
 						<img src="gallery/2.png" alt=""> <!--food-->
 					</a>
 				</div>
@@ -59,7 +59,7 @@
 					</a>
 				</div>
 				<div class="col-lg-12">
-					<a href="gallery/19.png">
+					<a href="gallery/19.png" class="gallery__item fresco" data-fresco-group="gallery">
 						<img src="gallery/19.png" alt=""> <!--selling cars-->
 					</a>
 				</div>
@@ -79,8 +79,8 @@
 					</a>
 				</div>
 				<div class="col-lg-12">
-					<a href="gallery/23.png">
-						<img src="gallery/23.png" alt=""> <!--thechnolgy-->
+					<a href="gallery/23.png" class="gallery__item fresco" data-fresco-group="gallery">
+						<img src="gallery/23.png" alt=""> 
 					</a>
 				</div>
 				<div class="col-md-4 col-sm-6">
@@ -99,7 +99,7 @@
 					</a>
 				</div>
 				<div class="col-lg-12">
-					<a href="gallery/10.png">
+					<a href="gallery/10.png" class="gallery__item fresco" data-fresco-group="gallery">
 						<img src="gallery/10.png" alt="">
 					</a>
 				</div>
@@ -119,7 +119,7 @@
 					</a>
 				</div>
 				<div class="col-lg-12">
-					<a href="gallery/16.png">
+					<a href="gallery/16.png" class="gallery__item fresco" data-fresco-group="gallery">
 						<img src="gallery/16.png" alt=""> <!--others-->
 					</a>
 				</div>
