--- a/projects/dir/gallery.html
+++ b/projects/dir/gallery.html
@@ -29,12 +29,12 @@
 		<div class="gallery__warp">
 			<div class="row">
 				<div class="col-lg-12">
-					<a href="gallery/header.png">
+					<a href="gallery/header.png" class="gallery__item fresco" data-fresco-group="gallery">
 						<img src="gallery/header.png" alt="">
 					</a>
 				</div>
 				<div class="col-lg-12">
-					<a href="gallery/head.jpg">
+					<a href="gallery/head.jpg" class="gallery__item fresco" data-fresco-group="gallery">
 						<img src="gallery/head.jpg" alt="">
 					</a>
 				</div>
