--- a/projects/mzt/gallery.html
+++ b/projects/mzt/gallery.html
@@ -29,7 +29,7 @@
 		<div class="gallery__warp">
 			<div class="row">
 				<div class="col-lg-12">
-					<a href="gallery/header.png">
+					<a href="gallery/header.png" class="gallery__item fresco" data-fresco-group="gallery">
 						<img src="gallery/header.png" alt="">
 					</a>
 				</div>
@@ -45,17 +45,12 @@
 				</div>
 				<div class="col-lg-12">
 					<a class="gallery__item fresco" data-fresco-group="gallery" href="gallery/1.png">
-						<img src="gallery/text.png" alt="">
+						<img src="gallery/3.png" alt="">
 					</a>
 				</div>
 				<div class="col-lg-12">
 					<a class="gallery__item fresco" data-fresco-group="gallery" href="gallery/4.png">
 						<img src="gallery/4.png" alt="">
-					</a>
-				</div>
-				<div class="col-lg-12">
-					<a class="gallery__item fresco" data-fresco-group="gallery" href="gallery/3.png">
-						<img src="gallery/3.png" alt="">
 					</a>
 				</div>
 				<div class="col-lg-12">
