--- a/projects/wes/gallery.html
+++ b/projects/wes/gallery.html
@@ -35,7 +35,7 @@
 		<div class="gallery__warp">
 			<div class="row">
 				<div class="col-lg-12">
-					<a href="gallery/header.png">
+					<a href="gallery/header.png" class="gallery__item fresco" data-fresco-group="gallery">
 						<img src="gallery/header.png" alt="">
 					</a>
 				</div>
