fix the add wes to the main page

--- a/index.html
+++ b/index.html
@@ -176,11 +176,11 @@
                     <div class="col-lg-4">
                         <div class="text-container text-center">
                             <div class="image-container">
-                                <a href="projects/mar/gallery.html">
-                                    <img class="img-fluid" src="projects/mar/marseille.jpg" alt="alternative">
+                                <a href="projects/wes/gallery.html">
+                                    <img class="img-fluid" src="projects/wes/westhame.jpg" alt="alternative">
                                 </a>
                             </div> <!-- end of image-container -->
-                            <p><strong>Olympique de Marseille - Artworks</strong></p>
+                            <p><strong>West Ham United - Artworks</strong></p>
                         </div> <!-- end of text-container -->
                     </div> <!-- end of col -->
                     <!-- 2 Project Grid -->
