--- a/projects/wac/gallery.html
+++ b/projects/wac/gallery.html
@@ -46,7 +46,7 @@
 						<img src="gallery/thirdh.jpg" alt="">
 					</a>
 				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6">
+				<div class="col-lg-12">
 					<a class="gallery__item fresco" href="gallery/forthh.jpg" data-fresco-group="gallery">
 						<img src="gallery/forthh.jpg" alt="">
 					</a>
