edit animation in projects

--- a/projects.html
+++ b/projects.html
@@ -131,8 +131,8 @@
 							<div class="row row-cols-2">
 
 								<div class="col">
-									<div class="text-container">
-										<div class="image-container hover-anim">
+									<div class="text-container hover-anim">
+										<div class="image-container">
 											<a href="projects/mar/gallery.html">
 												<img class="img-fluid" src="projects/mar/marseille.jpg" alt="alternative">
 											</a>
@@ -142,8 +142,8 @@
 								</div>
 
 								<div class="col">
-									<div class="text-container">
-										<div class="image-container hover-anim">
+									<div class="text-container hover-anim">
+										<div class="image-container">
 											<a href="projects/soc/gallery.html">
 												<img class="img-fluid" src="projects/soc/socialmedia.jpg" alt="alternative">
 											</a>
@@ -153,8 +153,8 @@
 								</div>
 
                                 <div class="col">
-									<div class="text-container">
-										<div class="image-container hover-anim">
+									<div class="text-container hover-anim">
+										<div class="image-container">
 											<a href="projects/mzt/gallery.html">
 												<img class="img-fluid" src="projects/mzt/mozart.png" alt="Its Mozart | cover">
 											</a>
@@ -164,8 +164,8 @@
 								</div>
 
 								<div class="col">
-									<div class="text-container">
-										<div class="image-container hover-anim">
+									<div class="text-container hover-anim">
+										<div class="image-container">
 											<a href="projects/dir/gallery.html">
 												<img class="img-fluid" src="projects/dir/morocco.png" alt="alternative">
 											</a>
@@ -175,8 +175,8 @@
 								</div>
 
                                 <div class="col">
-									<div class="text-container">
-										<div class="image-container hover-anim">
+									<div class="text-container hover-anim">
+										<div class="image-container">
 											<a href="projects/wes/gallery.html">
 												<img class="img-fluid" src="projects/wes/westhame.jpg" alt="alternative">
 											</a>
@@ -186,8 +186,8 @@
 								</div>
 
                                 <div class="col">
-									<div class="text-container">
-										<div class="image-container hover-anim">
+									<div class="text-container hover-anim">
+										<div class="image-container">
 											<a href="projects/wac/gallery.html">
 												<img class="img-fluid" src="projects/wac/widade.png" alt="alternative">
 											</a>
