soufyane-mokrim.md

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <!-- end of navigation -->
 
     <!-- Header -->
-    <header id="header" class="header">
+    <header id="header" class="header area-1">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
