--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h2 class="h2-heading">Offered services</h2>
-                    <p class="p-heading">As a Graphic Designer with over five years of experience, I've had the privilege of helping a diverse range of clients, from startups to established companies, elevate their brand and captivate their audience through compelling visual design.</p>
+                    <p class="p-heading">I have had the privilege of assisting a diverse range of clients, from startups to established companies, in elevating their brands and captivating their audiences through distinctive visual designs across all the aforementioned fields.</p>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
             <div class="row">
