--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                     <div class="text-box text-center cardx">
                         <i class="fas fa-copyright"></i>
                         <h4>BRANDING</h4>
-                        <p>Your brand is more than just a logo; it's the essence of your business or project. Our brand design service aims to help you establish a unique and compelling visual identity that leaves a lasting impression on your target audience. Give your brand the identity it deserves.</p>
+                        <p>Your brand is more than just a logo; it's the essence of your business or project. Our brand design service aims to help you establish a unique and compelling visual identity that leaves a lasting impression on your target audience.</p>
                     </div> <!-- end of text-box -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
