--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="text-container header-box">
-                        <h1 class="h1-large text-left"><span class="word"></span><br>Welcome to my World!</h1>
+                        <h1 class="h1-large text-left"><span class="word"></span><br>Welcome!</h1>
 							<a class="btn-solid-lg page-scroll" href="#about">Discover</a>
 							<a class="btn-outline-lg page-scroll" href="#contact">
 							<i class="fas fa-user"></i>Contact Me</a>
