--- a/index.html
+++ b/index.html
@@ -156,6 +156,8 @@
                     </div>
 					
                 </div> <!-- end of col -->
+                <!-- PDF resume -->
+                <a class="btn-solid-lg page-scroll mx-auto" href="/pdf/resume.pdf">Resume</a>
             </div> <!-- end of row -->
         </div> <!-- end of container -->
     </div> <!-- end of basic-1 -->
