--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
                     </div>
 					
                 </div> <!-- end of col -->
+                <!---->
                 <!-- PDF resume -->
                 <a class="btn-solid-lg page-scroll mx-auto" href="/pdf/resume.pdf">Resume</a>
             </div> <!-- end of row -->
@@ -243,7 +244,7 @@
                     <div class="text-box text-center cardx">
                         <i class="fas fa-copyright"></i>
                         <h4>BRANDING</h4>
-                        <p>Your brand is more than just a logo; it's the essence of your business or project. Our brand design service aims to help you establish a unique and compelling visual identity that leaves a lasting impression on your target audience. </br>For your brand.</p>
+                        <p>Your brand is more than just a logo; it's the essence of your business or project. Our brand design service aims to help you establish a unique and compelling visual identity that leaves a lasting impression on your target audience. For your brand.</p>
                     </div> <!-- end of text-box -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
