Edit the copyright

--- a/terms.html
+++ b/terms.html
@@ -275,7 +275,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <p class="p-small">Distributed By <a class="no-line" href="https://linktr.ee/ayoubelouardioff">Ayoub El Ouardi</a></p>
+                    <p class="p-small">Developed By <a class="no-line" href="https://wa.me/+212698467182">Minerva Inc</a></p>
                 </div> <!-- end of col -->
             </div> <!-- enf of row -->
         </div> <!-- end of container -->
