--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <a class="nav-link page-scroll" href="#header">Home<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#about">About</a>
+                        <a class="nav-link page-scroll" href="#about">About me</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="#services">Services</a>
